--- a/sass/pages/human-space.scss
+++ b/sass/pages/human-space.scss
@@ -1,6 +1,8 @@
 .container00 {
   &.container08 {
-    background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8)), url(../../images/humanFlight/01.jpg);
+    background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1)), url(../../images/humanFlight/01.jpg);
+    width: 100%;
+    object-fit: cover;
   }
 
   &.container09 {
@@ -22,6 +24,7 @@
 
 .container01-content {
   height: 90vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
